# myconkysetup

./: .editorconfig  .gitignore  LICENSE  README.md  conky-draw_bg.lua  conkyrc  darksky.php  darksky.php.ORIG  dscanner.ini  dub.sdl  fetchweather  nim_fetchweather  on_resume.sh  radeon-profile.desktop  update_weather.sh  wakeup_weather  weather
cpp/: CMakeLists.txt  README.md
cpp/src/: DataHandler.cpp  DataHandler.h  DataHandler_ImplClimaCell.cpp  DataHandler_ImplClimaCell.h  conf.h  main.cpp  options.cpp  options.h  pch.h  smart_pointers.cpp  smart_pointers.h  utils.cpp  utils.h
modular/: system_default
rust/: Cargo.toml  rust.files  weather-rust.sublime-project  weather-rust.sublime-workspace
rust/src/: context.rs  main.rs
rust/src/context/: database.rs  datahandler.rs
source/: context.d  darksky.d  database.d
