[package]
name = "darksky-r"
version = "0.1.0"
authors = ["Alex <silvercircle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
app_dirs = "1.2.1"
serde_json = "1.0.45"
serde = { version = "1.0.104", features = ["derive"] }
